--- a/tasks/preflight.yml
+++ b/tasks/preflight.yml
@@ -51,7 +51,7 @@
   block:
     - name: Get latest release
       uri:
-        url: "https://api.github.com/repos/tynany/keepalived_exporter/releases/latest"
+        url: "https://api.github.com/repos/gen2brain/keepalived_exporter/releases/latest"
         method: GET
         return_content: true
         status_code: 200
@@ -76,7 +76,7 @@
 #  block:
 #    - name: Get checksum list from github
 #      set_fact:
-#        _checksums: "{{ lookup('url', 'https://github.com/tynany/keepalived_exporter/releases/download/v' + keepalived_exporter_version + '/sha256sums.txt', wantlist=True) | list }}"
+#        _checksums: "{{ lookup('url', 'https://github.com/gen2brain/keepalived_exporter/releases/download/v' + keepalived_exporter_version + '/keepalived_exporter_0.3.0_checksums.txt', wantlist=True) | list }}"
 #      run_once: true
 #
 #    - name: "Get checksum for {{ go_arch }} architecture"
