change systemd config

--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -26,8 +26,8 @@
     - name: Download keepalived_exporter binary to local folder
       become: false
       get_url:
-        url: "https://github.com/gen2brain/keepalived_exporter/releases/download/v{{ keepalived_exporter_version }}/keepalived_exporter-{{ keepalived_exporter_version }}-{{ go_arch }}.tar.gz"
-        dest: "/tmp/keepalived_exporter_{{ keepalived_exporter_version }}_linux_{{ go_arch }}.tar.gz"
+        url: "https://github.com/gen2brain/keepalived_exporter/releases/download/{{ keepalived_exporter_version }}/keepalived_exporter-{{ keepalived_exporter_version }}-{{ go_arch }}.tar.gz"
+        dest: "/tmp/keepalived_exporter-{{ keepalived_exporter_version }}-{{ go_arch }}.tar.gz"
         #checksum: "sha256:{{ keepalived_exporter_checksum }}"
       register: _download_binary
       until: _download_binary is succeeded
@@ -39,15 +39,15 @@
     - name: Unpack keepalived_exporter binary
       become: false
       unarchive:
-        src: "/tmp/keepalived_exporter_{{ keepalived_exporter_version }}_linux_{{ go_arch }}.tar.gz"
+        src: "/tmp/keepalived_exporter-{{ keepalived_exporter_version }}-{{ go_arch }}.tar.gz"
         dest: "/tmp"
-        creates: "/tmp/keepalived_exporter_{{ keepalived_exporter_version }}_linux_{{ go_arch }}/keepalived_exporter"
+        creates: "/tmp/keepalived_exporter-{{ keepalived_exporter_version }}-{{ go_arch }}/keepalived_exporter"
       delegate_to: localhost
       check_mode: false
 
     - name: Propagate keepalived_exporter binaries
       copy:
-        src: "/tmp/keepalived_exporter_{{ keepalived_exporter_version }}_linux_{{ go_arch }}/keepalived_exporter"
+        src: "/tmp/keepalived_exporter-{{ keepalived_exporter_version }}-{{ go_arch }}/keepalived_exporter"
         dest: "{{ keepalived_exporter_binary_install_dir }}/keepalived_exporter"
         mode: 0755
         owner: root
